.metadata/.plugins/org.eclipse.cdt.ui/2580.build.log
12:25:50 **** Build of configuration Debug for project 2580 ****
make all 
Building file: ../src/2580.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/2580.d" -MT"src/2580.o" -o "src/2580.o" "../src/2580.cpp"
../src/2580.cpp:43:2: error: use of undeclared identifier 'com'
        com.set();
        ^
../src/2580.cpp:51:15: error: use of undeclared identifier 'com'
                bit = bit & com;
                            ^
2 errors generated.
make: *** [src/2580.o] Error 1

12:25:51 Build Finished (took 446ms)

